--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "flexbox-react": "^4.3.3",
     "netlify-cli": "^1.2.2",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.0"
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
